@@ -38,14 +38,14 @@ public final class FacetModel {
 			facetValueModels = facetSketch.getFacetRanges()
 					.stream()
 					.map(FacetValueModel::new)
-					.collect(Collectors.toList());
+					.toList();
 			facetParamModels = Collections.emptyList();
 		} else if (facetSketch.isCustomFacet()) {
 			facetValueModels = Collections.emptyList();
 			facetParamModels = facetSketch.getFacetParams().entrySet()
 					.stream()
 					.map(entry -> new FacetParamModel(entry.getKey(), entry.getValue()))
-					.collect(Collectors.toList());
+					.toList();
 		} else {
 			facetValueModels = Collections.emptyList();
 			facetParamModels = Collections.emptyList();
