@@ -203,7 +203,7 @@ public final class TaskTestGeneratorPlugin implements GeneratorPlugin {
 				.stream()
 				.map(TaskAttributeModel::getDomain)
 				.filter(domain -> domain.getScope().isDataObject())
-				.collect(Collectors.toList());
+				.toList();
 		//There MUST be only ONE candidate
 		if (candidates.size() == 1) {
 			return candidates.get(0).getDtSketchKey();
