@@ -66,7 +66,7 @@ public final class OOMLoader extends AbstractXmlLoader {
 				//On ne conserve que les classes et les domaines
 				.filter(obj -> obj.getType() == OOMType.Class)
 				.map(obj -> createClass(obj, isConstFieldNameInSource()))
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	@Override
@@ -75,7 +75,7 @@ public final class OOMLoader extends AbstractXmlLoader {
 				.stream()
 				.filter(obj -> obj.getType() == OOMType.Association)
 				.map(obj -> createAssociation(obj, isConstFieldNameInSource()))
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	private XmlClass createClass(final OOMObject obj, final boolean constFieldNameInSource) {
